Add link to google group in navbar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,6 +60,7 @@
                 <li><a href="{{ site.urls.hackage }}">Hackage</a></li>
                 <li><a href="{{ site.urls.github }}">Github</a></li>
                 <li class="divider"></li>
+                <li><a href="{{ site.urls.googlegroup }}">Google group</a></li>
                 <li><a href="{{ site.urls.openhub }}">Open HUB</a></li>
               </ul>
             </li>
