--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-left">
-            <li><a href="{{ site.baseurl }}download/">
+            <li><a href="{{site.urls.download}}">
               <span class="glyphicon glyphicon-download-alt"></span> Download
             </a></li>
             <li><a href="{{site.urls.readthedocs}}">
