Modernized code, fixed bugs and added news about 2.8 and 2.8.1
* added news and available sources and binaries for release 2.8 and 2.8.1
   https://github.com/BNFC/bnfc.github.com/issues/2
* fixed broken link to Implementing Programming Languages
  https://github.com/BNFC/bnfc.github.com/issues/3
* added github pages gemfile, see
  https://help.github.com/articles/setting-up-your-github-pages-site-locally-with-jekyll/#step-2-install-jekyll-using-bundler
* fixed html errors (w3c validator)
* added readme for developers of website
* lint on new-release script, fixed regex mistakes and --ignore-missing flag not
  being used. Added information for developer what to do after running the
  script
* update bootstrap and jQuery
* fixed link to wrong tutorial file (causing image not to be displayed)
* change tutorial html to html5 and validated html
* added link to tutorial files
* added favicon.ico
  https://favicon.io/favicon-generator/?t=BNFC&ff=Viga&fs=52&fc=%23CB4B16&b=rounded&bc=%23FEF8F6
* changed default download page as it probably was used before (instead of just
  linking to github)
* removed local assets (bootstrap & jquery) which are loaded from cdn

--- a/_includes/download-links.html
+++ b/_includes/download-links.html
@@ -2,8 +2,10 @@
   {% for pkg in include.release.packages %}
   <tr>
     <th><span class="icon icon-{{pkg[0]}}"></span> {{ pkg[0] | capitalize }}</th>
-    <td><a  href="{{site.baseurl}}download/{{ pkg[1] }}" class="btn btn-primary">
-        <span class="glyphicon glyphicon-download-alt"></span> {{ pkg[1] }}</a></td>
+    <td>
+        <a href="{{site.baseurl}}download/{{ pkg[1] }}" class="btn btn-primary">
+        <span class="glyphicon glyphicon-download-alt"></span> {{ pkg[1] }}</a>
+    </td>
   </tr>
   {% endfor %}
 </table>
