Removed dependence on baseurl
Baseurl was changing when navigating the the download page.
I don't know why. Possibly something GitHub specific.
This will keep working as long as the site stays at the root
of the domain (without sub paths)

--- a/_includes/download-links.html
+++ b/_includes/download-links.html
@@ -3,7 +3,7 @@
   <tr>
     <th><span class="icon icon-{{pkg[0]}}"></span> {{ pkg[0] | capitalize }}</th>
     <td>
-        <a href="{{site.baseurl}}download/{{ pkg[1] }}" class="btn btn-primary">
+        <a href="/download/{{ pkg[1] }}" class="btn btn-primary">
         <span class="glyphicon glyphicon-download-alt"></span> {{ pkg[1] }}</a>
     </td>
   </tr>
