--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{{ site.baseurl }}">
+          <a class="navbar-brand" href="/">
             <span style="font-family: monospace;">
               <span style="color:#839496">BNFC</span>
               <span style="color:#859900;">::=</span>
