--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,8 +54,9 @@
                 Links <span class="caret"></span>
               </a>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="{{ site.urls.hackage }}">Hackage</a></li>
                 <li><a href="{{ site.urls.github }}">Github</a></li>
+                <li><a href="{{ site.urls.hackage }}">Hackage</a></li>
+                <li><a href="{{ site.urls.stackage }}">Stackage</a></li>
                 <li class="divider"></li>
                 <li><a href="{{ site.urls.googlegroup }}">Google group</a></li>
                 <li><a href="{{ site.urls.openhub }}">Open HUB</a></li>
